<resources>
    <string name="app_name">TEK_APP</string>
    <string name="edit_message">Enter a message</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_topic">Discussion</string>
    <string name="menu_place">My Places</string>
    <string name="menu_bus">Bus Arrival Time</string>
    <string name="menu_announcement">Transit Announcement</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_about">About Us</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_signin">Sign In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string name="lbl_going">I\'M GOING TO</string>
    <string name="lbl_from">FROM</string>
    <string name="lbl_enter_desti">ENTER DESTINATION</string>
    <string name="lbl_enter_start">ENTER START ADDRESS</string>
    <string name="btn_go">GO</string>

    <string name="google_api_key">AIzaSyCmCjZVJvI5h2Qg7XcdI9jTFjyK-IgzyQk</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
</resources>
