<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >

        <TextView
                android:text="@string/lbl_going"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/colorWhite"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@drawable/right_rounded_corner"
                android:textAlignment="center" android:layout_marginEnd="50dp"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:text="@string/lbl_from"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                android:textColor="@color/colorWhite"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:background="@drawable/right_rounded_corner"
                android:textAlignment="center" android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/editText"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:inputType="textPersonName"
                android:background="@drawable/edittext_border"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:ems="10"
                android:id="@+id/editText"
                android:hint="@string/lbl_enter_desti"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" android:layout_marginEnd="50dp"
                app:layout_constraintEnd_toEndOf="parent" android:textColor="@color/colorPrimary"
                android:importantForAutofill="no"/>
        <EditText
                android:layout_width="0dp"
                android:layout_height="52dp"
                android:inputType="textPersonName"
                android:background="@drawable/edittext_border"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:ems="10"
                android:id="@+id/editText2"
                android:hint="@string/lbl_enter_start"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="50dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginTop="12dp" app:layout_constraintTop_toBottomOf="@+id/textView2"
                android:textColor="@color/colorPrimary" android:autofillHints=""/>

        <Button
                android:text="@string/btn_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rightcorner_gobutton"
                android:id="@+id/button"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/editText2"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="30sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
